Fri Apr  6 14:34:21 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * configure.ac:

          Added the makefiles for the new directories (Bug_689_Regression,
          Bug_1107_Regression, Bug_2561_Regression, Bug_2677_Regression and
          Bug_2735_Regression).

Fri Apr  6 13:46:19 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Notify/Bug_2561_Regression/Notify_Push_Consumer.cpp:

          Initialize count_ to 0 in the constructor.

Fri Apr  6 14:36:25 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * tao/ORB_Core.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/params.h:
        * tao/params.cpp:
        * docs/Options.html:

          Fix for bug 2871. It introduces a new option -ORBUseIPV6LinkLocal
          which is false by default, i.e. no IPv6 link local addresses will
          be used by server ORB.

Fri Apr  6 12:09:37 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/ImplRepo/Bug_689_Regression/Bug_689_Regression.mpc:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/Makefile.am:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/server.cpp:

          Added the ImR_Client library so that this test will work on static
          builds.

Thu Apr  5 15:45:30 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Notify/Bug_2561_Regression/Bug_2561_Regression.mpc:
        * orbsvcs/tests/Notify/Bug_2561_Regression/Consumer.cpp:
        * orbsvcs/tests/Notify/Bug_2561_Regression/Makefile.am:
        * orbsvcs/tests/Notify/Bug_2561_Regression/Notify_Push_Consumer.h:
        * orbsvcs/tests/Notify/Bug_2561_Regression/Notify_Push_Consumer.cpp:
        * orbsvcs/tests/Notify/Bug_2561_Regression/Supplier.cpp:
        * orbsvcs/tests/Notify/Bug_2561_Regression/go.idl:
        * orbsvcs/tests/Notify/Bug_2561_Regression/notify.conf:
        * orbsvcs/tests/Notify/Bug_2561_Regression/notify.conf.xml:
        * orbsvcs/tests/Notify/Bug_2561_Regression/run_test.pl: